moved persistence folder to somewhere it will work on all platforms'